--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,50 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
-  color: pink;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.container {
+  margin: 120px auto;
+  max-width: 600px;
+}
+
+form {
+  display: flex;
+  padding: 30px;
+  background-color: rgb(255, 199, 238);
+  margin-bottom: 40px;
+  border-radius: 15px;
+}
+
+input  {
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: 0.5px solid black;
+  background-color: white;
+  width: 250px
+  
+}
+
+
+select {
+  border-radius: 10px;
+  border: 0.5px solid black;
+  text-align: center;
+
+}
+.eyewear-brand {
+  background-color: pink;
+  padding: 60px;
+  border-radius: 15px;
+}
+
+footer {
+  margin-top: 100px;
+  font-size: 13px;
+  text-align: center;
+  display: flex;
 }
