--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,11 @@ body {
 h1 {
   text-align: center;
   margin-bottom: 40px;
-  color: rgb(240, 240, 240);
+  color: rgba(9, 9, 9, 0.711);
   display: block;
+  background-color: rgba(245, 245, 245, 0.387);
+  border-radius: 10px;
+  padding: 20px;
 }
 
 .container {
@@ -32,13 +35,15 @@ h1 {
   border-radius: 10px;
   border: 0.5px solid black;
   background-color: white;
-  margin-left: 100px;
-  width: 250px
+  margin-left: 95px;
+  width: 300px;
+  transition: all 200ms ease-in-out;
   
 }
 
 #user-input:hover  {
-  transition: all 200ms ease-in-out;
+  transform: scale(1.1);
+
   
 }
 
@@ -75,6 +80,38 @@ h1 {
   background-color: rgba(245, 245, 245, 0.387);
   padding: 60px;
   border-radius: 15px;
+  font-weight: bold;
+  font-size: 22px;
+  color: darkslategray;
+  text-align: center;
+  line-height: 1.7;
+
+}
+
+.hidden {
+  display: none;
+}
+
+.generating {
+  animation: blink-animation 0.5s steps(5, start) infinite;
+  font-weight: bold;
+  font-size: 22px;
+  color: darkslategray;
+  text-align: center;
+  line-height: 1;
+
+}
+
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
 
 footer {
